--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ ul {
      margin-bottom: 10px;
      font-size: 18px;
      font-size: 1.8rem;
-
+     line-height: 1.4;
 }
 .site-inner ul ul,
 .site-inner ol ol,
