--- a/style.css
+++ b/style.css
@@ -476,95 +476,116 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
      left: -9000px;
 }
 /* ---------- 1.7 Commenting ---------- */
-.comment-respond,
-.entry-comments,
-.entry-pings {
-	font-size: 16px;
-	font-size: 1.6rem;
-	margin: 0 auto;
-	padding: 20px 0;
-	width: 100%;
+ol.comment-list {
+     float: left;
+     width: 100%;
+     max-width: 750px;
 }
-.comment-respond .form-submit {
-	margin-bottom: 0;
+ol.comment-list li {
+     list-style-type: none;
+     margin-left: 0;
 }
-.comment-respond label {
-	width: 100%;
-	display: block;
-	margin-bottom: 1em;
+li.comment > article {
+     margin-bottom: 25px;
 }
-.comment-respond input,
-.comment-respond textarea {
-	width: 100%;
-	display: block;
-}
-.comment-respond input[type='submit'] {
-	width: auto;
-}
-.comment-author span:first-of-type {
-	font-weight: 700;
-	text-transform: capitalize;
-}
-.site-inner ul.comment-list li,
-.site-inner ol.comment-list li {
-	padding: 25px;
-	list-style-type: none;
-	border: 1px solid #eee;
-	margin-left: 0;
-	margin-top: 25px;
-
-}
-.site-inner ul.comment-list li.depth-1,
-.site-inner ol.comment-list li.depth-1 {
-	margin-top: 0;
-	margin-bottom: 25px;
-}
-.comment-list .comment-respond {
-	padding-left: 5vw;
-}
-.comment-list > .comment-respond {
-	padding-left: 0;
+.comment article {
+     background: #fcfcfc;
+     border: 2px solid #eee;
+     border-radius: 3px;
+     padding: 40px;
 }
 .comment-header {
-	margin-bottom: 25px;
+	width: calc(100% + 80px);
+     background: #f9f9f9;
+     border-bottom: 2px solid #eee;
+     margin: -40px 0 40px -40px;
+     overflow: hidden;
+     padding: 2%;
+     position: relative;
 }
-.comment-header p {
-	margin-bottom: 0;
-	display: flex;
-	align-items: center;
+.comment-header a {
+     border-bottom: none;
+	font-size: 16px;
+	font-size: 1.6rem;
 }
-.entry-pings .comment-edit-link {
-	padding: 0;
-	clear: both;
-	display: block;
+.comment-header time a {
+	font-size: 14px;
+	font-size: 1.4rem;
+	font-style: normal;
+	color: #555;
+	text-decoration: none;
+}
+.comment-author {
+     margin: 0;
+}
+.comment .avatar {
+     margin-right: 15px;
+     float: left;
+}
+.comment-author span[itemprop="name"] {
+     float: left;
+     font-weight: 600;
+     color: #555;
+     line-height: 20px;
+     font-size: 20px;
+     margin-right: 5px;
+}
+.comment-author span[itemprop="name"] a{
+	font-size: 2rem;
+     line-height: 20px;
+     text-decoration: none;
+     font-weight: 600;
+}
+.says,
+.comment-meta,
+.comment-edit-link {
+     float: left;
+     font-size: 16px;
+     font-style: italic;
+     margin: 0;
+     line-height: 20px;
 }
 .comment-meta {
-	word-break: break-all;
+     position: absolute;
+     left: 76px;
+     top: 37px;
 }
-.entry-pings .comment-meta {
-	padding: 0 0 1em;
+.comment-reply {
+     clear: both;
 }
-.comment-meta .comment-time a {
-	color: #c6cace;
+a.comment-reply-link {
+	font-size: 16px;
+	text-transform: uppercase;
 	text-decoration: none;
-	font-size: small;
+	font-weight: 600;
+	letter-spacing: 1px;
+	float: right;
 }
-.comment-content {
-	clear: both;
+.comment ul.children {
+     position: relative;
+     margin: 0 0 0 40px;
 }
-.comment-content ul > li {
-	list-style-type: disc;
+#respond {
+     float: left;
+     width: 100%;
 }
-.comment-respond input[type='email'] label,
-.comment-respond input[type='text'] label,
-.comment-respond input[type='url'] label {
-	display: block;
-	margin-right: 10px;
-	margin-right: 1rem;
+form.comment-form {
+     float: left;
+     width: 100%;
+     max-width: 500px;
 }
-.comment-reply-title a {
-	font-size: 15px;
-	font-size: 1.5rem;
+.comment-form textarea,
+.comment-form input[type="text"],
+.comment-form input[type="email"],
+.comment-form input[type="url"] {
+     font-size: 16px;
+     padding: 10px 15px;
+     width: 100%;
+     border: 1px solid #ddd;
+}
+.comment-form label {
+     float: left;
+     width: 100%;
 }
 /* ---------- 1.8 Buttons ---------- */
 .button,
