--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ html {
      min-height: 100%;
      margin: 0;
      font-size: 10px;
+     position: relative;
 }
 html,
 input[type="search"]{
